add security features

--- a/backend/UserService/src/main/resources/application.properties
+++ b/backend/UserService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=user-service
 server.port=8060
 
-spring.data.mongodb.uri=mongodb+srv://gauraditya200:LinkXpert123@postcluster.ifsj8a9.mongodb.net/UserDB?retryWrites=true&w=majority&appName=PostCluster
+spring.data.mongodb.uri=mongodb+srv://gauraditya200:Aditya7051001#@usercluster.olxvvc1.mongodb.net/UserDB?retryWrites=true&w=majority&appName=UserCluster
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
