--- a/backend/PostService/pom.xml
+++ b/backend/PostService/pom.xml
@@ -57,13 +57,13 @@
             <version>4.3.0</version>
         </dependency>
 
-
-        <!-- https://mvnrepository.com/artifact/org.springframework/spring-webflux -->
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webflux</artifactId>
-            <version>7.0.0-M6</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
+
+
+
 
         <dependency>
 			<groupId>org.springframework.boot</groupId>
